<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Freebloks</string>

    <string name="new_local_game">New Game</string>
    <string name="resume">Resume</string>
    <string name="join_game">Join</string>
    <string name="host_game">Host</string>
    <string name="preferences">Settings</string>
    <string name="hint">Hint</string>
    <string name="undo">Undo</string>
    <string name="main_menu">Main Menu</string>
    <string name="about">About</string>
    <string name="about_freebloks">About Freebloks&#8230;</string>
    <string name="special_thanks_to">Special thanks to</string>
    <string name="connecting">Connecting to server&#8230;</string>
    <string name="connection_refused">Connection refused</string>
    <string name="could_not_restore_game">Could not restore game</string>
    <string name="do_you_want_to_leave_current_game">Are you sure you want to cancel the current game?</string>
    <string name="disconnect_error">Connection closed: %1$s. You are now offline.</string>
    <string name="default_server">Default</string>

    <string name="waiting_for_color">Waiting for %1$s</string>
    <string name="color_is_out_of_moves">%1$s is out of moves</string>
    <string name="player_status_moves">%1$d moves</string>
    <string name="touch_to_skip">touch to skip</string>
    <string name="no_player">no player</string>
    <string name="not_connected">not connected</string>
    <string name="your_turn">It\'s your turn, %1$s!</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">Start</string>
    <string name="custom_game_title">Custom Game</string>
    <string name="sound_on">Sound On</string>
    <string name="sound_off">Sound Off</string>

    <string name="statistics">Statistics</string>
    <string name="clear_statistics">Reset All</string>
    <string-array name="statistics_labels">
        <item>Games played</item>
        <item>Good games (+15)</item>
        <item>Perfect games (+20)</item>
        <item>1st place</item>
        <item>2nd place</item>
        <item>3rd place</item>
        <item>4th place</item>
        <item>Stones used</item>
        <item>Points total</item>
    </string-array>

    <string name="googleplus">Google+</string>
    <string name="googleplus_signin">Sign in</string>
    <string name="googleplus_signin_long">Sign in with Google+</string>
    <string name="googleplus_signout">Sign out</string>
    <string name="googleplus_signout_long">Signed in with Google+ as %1$s</string>
    <string name="googleplus_leaderboard">Leaderboard</string>
    <string name="googleplus_leaderboard_long">Show scores of people in your circles</string>
    <string name="googleplus_achievements">Achievements</string>
    <string name="googleplus_achievements_long">Show earned achievements</string>

    <string name="lobby_waiting_for_players">Waiting for players</string>
    <string name="connected_clients">%1$d clients</string>
    <string name="chat">Chat</string>
    <string name="join_server_address">Server:</string>
    <string name="join_player_name">Your name:</string>
    <string name="client_d">Player %1$d</string>
    <string name="player_joined_color">%1$s is playing %2$s</string>
    <string name="player_left_color">%1$s (%2$s) has left</string>
    <string name="no_addresses_found">[no IP-address found]</string>
    <string name="lobby_message_hint">Type message</string>

    <string name="rate_now">Yes</string>
    <string name="rate_later">Later</string>
    <string name="rate_never">No</string>
    <string name="rate_freebloks_title">Rate Freebloks</string>
    <string name="rate_freebloks_text">If you enjoy Freebloks, would you like to take a minute and rate it?</string>
    <string name="rate_freebloks_donate_link"><u>Please support Freebloks</u></string>


    <plurals name="number_of_stones_left">
        <item quantity="one">%1$d stone left</item>
        <item quantity="other">%1$d stones left</item>
    </plurals>
    <plurals name="number_of_points">
        <item quantity="one">%1$d point</item>
        <item quantity="other">%1$d points</item>
    </plurals>
    <string-array name="places">
        <item>1st place</item>
        <item>2nd place</item>
        <item>3rd place</item>
        <item>4th place</item>
    </string-array>
    <string name="game_finished">Game Over</string>
    <string name="random_color">Random color</string>
    <string-array name="color_names">
        <item>White</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Red</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Purple</item>
    </string-array>
    <string-array name="difficulties">
        <item>nuts</item>
        <item>hard</item>
        <item>medium</item>
        <item>easy</item>
        <item>very easy</item>
    </string-array>
    <string-array name="game_modes">
        <item>2 Players, 2 Colors</item>
        <item>2 Players, 4 Colors</item>
        <item>Blokus Classic</item>
        <item>Blokus Duo</item>
        <item>Blokus Junior</item>
    </string-array>
    <string-array name="game_field_sizes">
        <item>13x13</item>
        <item>14x14</item>
        <item>15x15</item>
        <item>17x17</item>
        <item>20x20</item>
        <item>23x23</item>
    </string-array>

    <string name="please_donate">Support the developers</string>
    <string name="donation_text_long">Freebloks is free software. You can use and modify it completely free of charge!\n\nBut that does not mean it has no value. That\'s why you can decide how much the game is worth to you and support the development of free software.</string>
    <string name="donation_text_short">What is Freebloks worth to you?</string>
    <string name="donation_nothing">Nothing</string>
    <string name="donation_next">Next</string>
    <string name="donation_freebloksvip">Freebloks VIP</string>

    <string-array name="theme_labels">
        <item>Black</item>
        <item>Blue</item>
        <item>Flowery cloth</item>
        <item>Striped cloth</item>
        <item>Wood</item>
        <item>Bricks</item>
        <item>Metal</item>
        <item>Velvet</item>
        <item>Carpet</item>
        <item>Grass</item>
    </string-array>
    <string-array name="theme_values" translatable="false" >
        <item>black</item>
        <item>blue</item>
        <item>texture_table_cloth_1</item>
        <item>texture_table_cloth_2</item>
        <item>texture_wood</item>
        <item>texture_bricks</item>
        <item>texture_metal</item>
		<item>texture_velvet</item>
        <item>texture_carpet_blue</item>
        <item>texture_grass</item>
    </string-array>
    
    <string name="notification_continue">Continue</string>
    <string name="notification_disconnect">Disconnect</string>
    
    <string name="prefs_interface">Interface</string>
    <string name="prefs_display">Display</string>
    <string name="prefs_misc">Miscellaneous</string>
    <string name="prefs_sounds_long">Play sound effects</string>
    <string name="prefs_sounds">Sounds</string>
    <string name="prefs_vibrate_long">Vibrate when moving stones</string>
    <string name="prefs_vibrate">Vibrate</string>
    <string name="prefs_notifications_long">Show notifications in multiplayer games</string>
    <string name="prefs_notifications">Notifications</string>
    <string name="prefs_snap_to_corners_long">Help by snapping pieces to close valid positions</string>
    <string name="prefs_snap_to_corners">Snap to Corners</string>
    <string name="prefs_undo_long">Undo last move with back button</string>
    <string name="prefs_undo">Undo with Back</string>
    <string name="prefs_immersive_long">Hide software navigation buttons</string>
    <string name="prefs_immersive">Fullscreen</string>
    <string name="prefs_show_corners_long">Show possible corners of your stones</string>
    <string name="prefs_show_corners">Corners</string>
    <string name="prefs_show_opponents_long">Show opponents\' stones</string>
    <string name="prefs_show_opponents">Opponents</string>
    <string name="prefs_show_animations">Animations</string>
    
    <string-array name="prefs_animations_labels">
        <item>Off</item>
        <item>Reduced (30 fps)</item>
        <item>Full (60 fps)</item>
    </string-array> 
    <string-array name="prefs_animations_values" translatable="false" >
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array> 
    
    <string name="prefs_skip_intro_long">Skip intro animation on app start</string>
    <string name="prefs_skip_intro">Skip Intro</string>
    <string name="prefs_auto_resume_long">Automatically resume last game</string>
    <string name="prefs_auto_resume">Auto-resume</string>
    <string name="prefs_rate_review_long">Please rate or leave a comment</string>
    <string name="prefs_rate_review">Freebloks in %1$s&#8230;</string>
    <string name="prefs_donation_long">Please support the development with a donation</string>
    <string name="prefs_donation">Support Freebloks&#8230;</string>
    <string name="prefs_donate">Donate</string>
    <string name="prefs_player_name">Player Name</string>
    <string name="prefs_player_name_default">[default]</string>
    <string name="prefs_theme">Background</string>
    <string name="prefs_statistics">Statistics</string>
    <string name="prefs_statistics_long">Show game statistics</string>
</resources>
