<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/new_game"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/new_local_game" >
    </item>
    <item
        android:id="@+id/sound_toggle_button"
        android:icon="@drawable/ic_volume_up_white_48dp"
        android:showAsAction="ifRoom"
        android:title="@string/sound_on" >
    </item>
    <item
        android:id="@+id/hint"
        android:icon="@drawable/ic_info_outline_white_48dp"
        android:showAsAction="ifRoom"
        android:title="@string/hint">
    </item>
    <item
        android:id="@+id/undo"
        android:icon="@drawable/ic_action_undo"
        android:showAsAction="ifRoom"
        android:title="@string/undo">
    </item>
    <item
        android:id="@+id/preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/preferences">
    </item>
    <item
        android:id="@+id/show_main_menu"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/main_menu">
    </item>
</menu>