<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:key="rate_review"
        android:summary="@string/prefs_rate_review_long"
        android:title="@string/prefs_rate_review" >
    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/prefs_donation_long"
        android:title="@string/prefs_donation"
        android:key="donate" >
        <intent android:action="de.saschahlusiak.freebloks.SHOW_DONATE" />
    </PreferenceScreen>

    <PreferenceScreen
        android:summary="Copyright (c) by Sascha Hlusiak, 2012-2015."
        android:title="@string/about_freebloks" >
        <intent android:action="de.saschahlusiak.freebloks.SHOW_ABOUT" />
    </PreferenceScreen>

</PreferenceScreen>