<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ff003f7f">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/new_game"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:text="@string/new_local_game"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/continue_game"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_weight="0"
                android:text="@string/continue_local_game"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <Button
            android:id="@+id/join_game"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/join_game"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Button
            android:id="@+id/preferences"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/preferences"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</RelativeLayout>