<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:gravity="center_horizontal"
        android:text="@string/donation_text_long"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.5"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="8dp" >

            <RadioButton
                android:id="@+id/donation_none"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_nothing"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <RadioButton
                android:id="@+id/donation_001"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@android:string/unknownName"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioButton
                android:id="@+id/donation_002"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="false"
                android:text="@android:string/unknownName"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioButton
                android:id="@+id/donation_003"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@android:string/unknownName"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioButton
                android:id="@+id/donation_004"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@android:string/unknownName"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
			<RadioButton
		        android:id="@+id/donation_freebloksvip"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:text="@string/donation_freebloksvip" />

        </RadioGroup>

        <Button
            android:id="@+id/next"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/donation_next"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>